--- a/pages/listeUnits.html
+++ b/pages/listeUnits.html
@@ -66,7 +66,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
-            <i class="fa fa-fw fa-sign-out-alt"></i>Logout</a>
+            <i id="connectStatus" class="fa fa-fw fa-sign-out-alt"></i>Logout</a>
         </li>
       </ul>
     </div>
