--- a/index.html
+++ b/index.html
@@ -9,42 +9,42 @@
   <meta name="author" content="">
   <title>Andromia</title>
   <!-- Bootstrap core CSS-->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="./vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom fonts for this template-->
-  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="./vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
   <!-- Page level plugin CSS-->
-  <link href="vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
+  <link href="./vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
   <!-- Custom styles for this template-->
-  <link href="css/sb-admin.css" rel="stylesheet">
+  <link href="./css/sb-admin.css" rel="stylesheet">
   
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="js/main.js" type="text/javascript"></script>
+  <script src="./https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./js/main.js" type="text/javascript"></script>
 </head>
 
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-    <a id="wlcmessage" class="navbar-brand" href="index.html">Bienvenue Visiteur !</a>
+    <a id="wlcmessage" class="navbar-brand" href="./index.html">Bienvenue Visiteur !</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Carte">
-          <a class="nav-link" href="index.html">
+          <a class="nav-link" href="./index.html">
             <i class="fa fa-fw fa-globe"></i>
             <span class="nav-link-text">Carte</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Units">
-          <a class="nav-link" href="/pages/listeUnits.html">
+          <a class="nav-link" href="./pages/listeUnits.html">
             <i class="fa fa-fw fa-users"></i>
             <span class="nav-link-text">Mes Units</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Runes">
-          <a class="nav-link" href="/pages/runes.html">
+          <a class="nav-link" href="./pages/runes.html">
             <i class="fa fa-fw fab fa-gripfire"></i>
             <span class="nav-link-text">Mes Runes</span>
           </a>
@@ -71,7 +71,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a id="StatusLink" class="nav-link" href="pages/login.html">
+          <a id="StatusLink" class="nav-link" href="./pages/login.html">
             <i id="ConnectStatus" class="fas fa-fw fa-sign-in-alt"></i>Connexion</a>
         </li>
       </ul>
@@ -88,7 +88,7 @@
       <!-- Icon Cards-->
       <div class="row">
                 <div class="col-xl-12 col-sm-6 mb-3">
-            <img class="rounded border" src="/images/Andromia.png" alt="carte d'Andromia">
+            <img class="rounded border" src="./images/Andromia.png" alt="carte d'Andromia">
         </div>
       </div>
     </div>
@@ -142,13 +142,13 @@
       </div>
     </div>-->
     <!-- Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="./vendor/jquery/jquery.min.js"></script>
+    <script src="./vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="./vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin.min.js"></script>
+    <script src="./js/sb-admin.min.js"></script>
   </div>
 </body>
 
