--- a/pages/listeUnits.html
+++ b/pages/listeUnits.html
@@ -20,7 +20,7 @@
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-    <a class="navbar-brand" href="index.html">Bienvenue Visiteur !</a>
+    <a class="navbar-brand" href="../index.html">Bienvenue Visiteur !</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -33,13 +33,13 @@
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Units">
-          <a class="nav-link" href="listeUnits.html">
+          <a class="nav-link" href="./listeUnits.html">
             <i class="fa fa-fw fa-users"></i>
             <span class="nav-link-text">Mes Units</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Runes">
-          <a class="nav-link" href="runes.html">
+          <a class="nav-link" href="./runes.html">
             <i class="fab fa-fw fa-gripfire"></i>
             <span class="nav-link-text">Mes Runes</span>
           </a>
@@ -76,7 +76,7 @@
       <!-- Breadcrumbs-->
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          Mes Runes
+          Mes Units
         </li>
       </ol>
       <div class="row">
