--- a/pages/register.html
+++ b/pages/register.html
@@ -14,35 +14,38 @@
   <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <!-- Custom styles for this template-->
   <link href="../css/sb-admin.css" rel="stylesheet">
+
+  <script src="../vendor/jquery/jquery.min.js"></script>
+  <script src="../js/inscription.js" type="text/javascript"></script>
 </head>
 
 <body class="bg-dark">
   <div class="container">
     <div class="card card-register mx-auto mt-5">
-      <div class="card-header">Créer un compte</div>
+      <div class="card-header">Inscription</div>
       <div class="card-body">
-        <form>
+        <form id="inscription">
           <div class="form-group">
-            <label for="exampleInputLastName">Nom</label>
-            <input class="form-control" id="exampleInputLastName" type="text" aria-describedby="nameHelp" placeholder="Votre nom">
+            <label for="nom">Nom</label>
+            <input class="form-control" type="text" name="nom" aria-describedby="nameHelp" placeholder="Votre nom" required>
           </div>
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="Votre adresse courriel">
+            <label for="courriel">Email address</label>
+            <input class="form-control" type="email" name="courriel" aria-describedby="emailHelp" placeholder="Votre adresse courriel" required>
           </div>
           <div class="form-group">
             <div class="form-row">
               <div class="col-md-6">
-                <label for="exampleInputPassword1">Mot de passe</label>
-                <input class="form-control" id="exampleInputPassword1" type="password" placeholder="Votre mot de passe">
+                <label for="password">Mot de passe</label>
+                <input class="form-control" type="password" name="password" placeholder="Votre mot de passe" required>
               </div>
               <div class="col-md-6">
-                <label for="exampleConfirmPassword">Confirmation</label>
-                <input class="form-control" id="exampleConfirmPassword" type="password" placeholder="Votre mot de passe">
+                <label for="confirmPassword">Confirmation</label>
+                <input class="form-control" type="password" name="confirmPassword" placeholder="Confirmer votre mot de passe" required>
               </div>
             </div>
           </div>
-          <a class="btn btn-primary btn-block" href="login.html">Inscription</a>
+          <a class="btn btn-primary btn-block" id="login">Inscription</a>
         </form>
         <div class="text-center">
           <a class="d-block small mt-3" href="login.html">Page de connexion</a>
@@ -51,7 +54,6 @@
     </div>
   </div>
   <!-- Bootstrap core JavaScript-->
-  <script src="../vendor/jquery/jquery.min.js"></script>
   <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <!-- Core plugin JavaScript-->
   <script src="../vendor/jquery-easing/jquery.easing.min.js"></script>
