Connexion + MAJ accueil

--- a/pages/login.html
+++ b/pages/login.html
@@ -33,7 +33,7 @@
             <label for="exampleInputPassword1">Mot de passe</label>
             <input class="form-control" id="pass" type="password" placeholder="Votre mot de passe">
           </div>
-          <a class="btn btn-primary btn-block" id="login" href="../index.html">Connexion</a>
+          <a class="btn btn-primary btn-block" id="login" href="#">Connexion</a>
         </form>
         <div class="text-center">
           <a class="d-block small mt-3" href="register.html">Créer un compte</a>
