--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Custom styles for this template-->
   <link href="./css/sb-admin.css" rel="stylesheet">
   
-  <script src="./https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./js/main.js" type="text/javascript"></script>
 </head>
 
@@ -63,11 +63,13 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle mr-lg-2" id="messagesDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fa fa-fw fa-map-marker-alt"></i>
+            <span id="userLocation"></span>
           </a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle mr-lg-2" id="alertsDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <i class="fa fa-fw fa-gem"></i>
+              <span id="totalInox"></span>
           </a>
         </li>
         <li class="nav-item">
