--- a/pages/register.html
+++ b/pages/register.html
@@ -21,7 +21,8 @@
 
 <body class="bg-dark">
   <div class="container">
-    <div class="card card-register mx-auto mt-5">
+    <div id="erreur"></div>
+    <div class="card card-register mx-auto mt-3">
       <div class="card-header">Inscription</div>
       <div class="card-body">
         <form id="inscription">
