--- a/pages/login.html
+++ b/pages/login.html
@@ -21,6 +21,7 @@
 
 <body class="bg-dark">
   <div class="container">
+    <div id="erreur"></div>
     <div class="card card-login mx-auto mt-5">
       <div class="card-header">Connexion</div>
       <div class="card-body">
