--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-    <a id="wlcmessage" class="navbar-brand" href="./index.html">Bienvenue Visiteur !</a>
+    <a id="wlcmessage" class="navbar-brand" href="./index.html"></a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -74,7 +74,7 @@
         </li>
         <li class="nav-item">
           <a id="StatusLink" class="nav-link" href="./pages/login.html">
-            <i id="ConnectStatus" class="fas fa-fw fa-sign-in-alt"></i>Connexion</a>
+            <i id="ConnectStatus" class="fas fa-fw fa-sign-in-alt"></i></a>
         </li>
       </ul>
     </div>
@@ -107,42 +107,24 @@
     <a class="scroll-to-top rounded" href="#page-top">
       <i class="fa fa-angle-up"></i>
     </a>
-    <!-- Login Modal-->
-    <!--<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="loginModalLabel">Prêt à quitter?</h5>
-            <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">×</span>
-            </button>
-          </div>
-          <div class="modal-body">Sélectionner "Déconnexion" ci-dessous si vous voulez fermer votre session.</div>
-          <div class="modal-footer">
-            <button class="btn btn-secondary" type="button" data-dismiss="modal">Annuler</button>
-            <a class="btn btn-primary" href="login.html">Déconnexion</a>
-          </div>
-        </div>
-      </div>
-    </div>-->
     <!-- Logout Modal-->
-    <!--<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="logoutModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Prêt à quitter?</h5>
+            <h5 class="modal-title" id="logoutModalLabel">Prêt à quitter?</h5>
             <button class="close" type="button" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">×</span>
             </button>
           </div>
-          <div class="modal-body">Sélectionner "Déconnexion" ci-dessous si vous voulez fermer votre session.</div>
+          <div class="modal-body">Choisir "Déconnexion" ci-dessous pour terminer votre aventure.</div>
           <div class="modal-footer">
             <button class="btn btn-secondary" type="button" data-dismiss="modal">Annuler</button>
-            <a class="btn btn-primary" href="login.html">Déconnexion</a>
+            <a id="logout" class="btn btn-primary" href="./pages/login.html">Déconnexion</a>
           </div>
         </div>
       </div>
-    </div>-->
+    </div>
     <!-- Bootstrap core JavaScript-->
     <script src="./vendor/jquery/jquery.min.js"></script>
     <script src="./vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
