--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link href="./css/sb-admin.css" rel="stylesheet">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="./js/main.js" type="text/javascript"></script>
+  <script src="./js/menu.js" type="text/javascript"></script>
 </head>
 
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
@@ -32,20 +32,20 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Carte">
-          <a class="nav-link" href="./index.html">
+          <a class="nav-link" id="index" href="./index.html">
             <i class="fa fa-fw fa-globe"></i>
             <span class="nav-link-text">Carte</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Units">
-          <a class="nav-link" href="./pages/listeUnits.html">
+          <a class="nav-link" id="units" href="./pages/listeUnits.html">
             <i class="fa fa-fw fa-users"></i>
             <span class="nav-link-text">Mes Units</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Runes">
-          <a class="nav-link" href="./pages/runes.html">
-            <i class="fa fa-fw fab fa-gripfire"></i>
+          <a class="nav-link" id="runes" href="./pages/runes.html">
+            <i class="fab fa-fw fa-gripfire"></i>
             <span class="nav-link-text">Mes Runes</span>
           </a>
         </li>
@@ -59,19 +59,7 @@
           </a>
         </li>
       </ul>
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle mr-lg-2" id="messagesDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fa fa-fw fa-map-marker-alt"></i>
-            <span id="userLocation"></span>
-          </a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle mr-lg-2" id="alertsDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i class="fa fa-fw fa-gem"></i>
-              <span id="totalInox"></span>
-          </a>
-        </li>
+      <ul class="navbar-nav ml-auto" id="menuHeader">
         <li class="nav-item">
           <a id="StatusLink" class="nav-link" href="./pages/login.html">
             <i id="ConnectStatus" class="fas fa-fw fa-sign-in-alt"></i></a>
