--- a/pages/unit.html
+++ b/pages/unit.html
@@ -15,6 +15,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
   <!-- Custom styles for this template-->
   <link href="../css/sb-admin.css" rel="stylesheet">
+  <link href="../css/image.css" rel="stylesheet" type="text/css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="../js/menu.js"></script>
@@ -74,6 +75,7 @@
           Détails d'une unit
         </li>
       </ol>
+      <div id="erreur"></div>
       <div class="row">
         <table class="table">
           <tr>
