Correctif menu de gauche

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Units">
           <a class="nav-link" id="units" href="./pages/listeUnits.html">
-            <i class="fa fa-fw fa-users"></i>
-            <span class="nav-link-text">Mes Units</span>
+            <!--<i class="fa fa-fw fa-users"></i>
+            <span class="nav-link-text">Mes Units</span>-->
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Runes">
           <a class="nav-link" id="runes" href="./pages/runes.html">
-            <i class="fab fa-fw fa-gripfire"></i>
-            <span class="nav-link-text">Mes Runes</span>
+            <!--<i class="fab fa-fw fa-gripfire"></i>
+            <span class="nav-link-text">Mes Runes</span>-->
           </a>
-        </li>
+          </li>
       </ul>
 
 
